--- a/app/assets/stylesheets/base/_skin-gord.scss
+++ b/app/assets/stylesheets/base/_skin-gord.scss
@@ -311,6 +311,7 @@
       & img{
         width: 100%;
         border-radius: 50%;
+        height: 100%;
       }
     }
      li > {
